syntax = "proto3";
package freym.streams.management;
import "streams/management/event.proto";

message PaginateStreamRequest {
	string tenant_id = 1;
	string topic = 2;
	string stream = 3;
	int64 page = 4;
	int64 per_page = 5;
	// when a deployment_id (!= 0) is provided the snapshot will only be used by queries with a deployment_id that is equal or higher than the shapshot deployment_id.
	int64 deployment_id = 6;
	string snapshot_event_id = 7;
	bool do_not_use_snapshots = 8;
}

message PaginateStreamResponse {
	repeated Event events = 1;
	string snapshot_event_id = 2;
}

message PaginateStreamAfterEventIdRequest {
	string tenant_id = 1;
	string topic = 2;
	string stream = 3;
	string event_id = 4;
	int64 page = 5;
	int64 per_page = 6;
	// when a deployment_id (!= 0) is provided the snapshot will only be used by queries with a deployment_id that is equal or higher than the shapshot deployment_id.
	int64 deployment_id = 7;
	string snapshot_event_id = 8;
	bool do_not_use_snapshots = 9;
}

message PaginateStreamAfterEventIdResponse {
	repeated Event events = 1;
	string snapshot_event_id = 2;
}

message PaginateEventsRequest {
	string tenant_id = 1;
	string topic = 2;
	repeated string types = 3;
	int64 page = 4;
	int64 per_page = 5;
}

message PaginateEventsResponse {
	repeated Event events = 1;
}

message PaginateEventsAfterEventIdRequest {
	string tenant_id = 1;
	string topic = 2;
	repeated string types = 3;
	string event_id = 4;
	int64 page = 5;
	int64 per_page = 6;
}

message PaginateEventsAfterEventIdResponse {
	repeated Event events = 1;
}
