syntax = "proto3";
package freym.streams.management;
import "streams/management/publish.proto";
import "streams/management/subscribe.proto";
import "streams/management/event.proto";
import "streams/management/gdpr.proto";
import "streams/management/paginate.proto";
import "streams/management/backchannel.proto";
import "streams/management/stream.proto";
import "streams/management/snapshot.proto";

service Service {
	rpc Publish (PublishRequest) returns (PublishResponse);
	rpc Subscribe(stream SubscribeRequest) returns (stream SubscribeResponse);
	rpc GetEvent(GetEventRequest) returns (Event);
	rpc GetLastEvent(GetLastEventRequest) returns (Event);
	rpc GetLastEventByTypes(GetLastEventByTypesRequest) returns (Event);
	rpc IsStreamEmpty(IsStreamEmptyRequest) returns (IsStreamEmptyResponse);
	rpc PaginateStream(PaginateStreamRequest) returns (PaginateStreamResponse);
	rpc PaginateStreamAfterEventId(PaginateStreamAfterEventIdRequest) returns (PaginateStreamAfterEventIdResponse);
	rpc PaginateEvents(PaginateEventsRequest) returns (PaginateEventsResponse);
	rpc PaginateEventsAfterEventId(PaginateEventsAfterEventIdRequest) returns (PaginateEventsAfterEventIdResponse);
	rpc IntroduceGdprOnEventField(IntroduceGdprOnEventFieldRequest) returns (IntroduceGdprOnEventFieldResponse);
	rpc InvalidateGdpr(InvalidateGdprRequest) returns (InvalidateGdprResponse);
	rpc BackchannelEvent(BackchannelEventRequest) returns (BackchannelEventResponse);
	rpc CreateStreamSnapshot(CreateStreamSnapshotRequest) returns (CreateStreamSnapshotResponse);
}
